RESOLVED FIXED275946
[GTK][WPE] Application ID is not used consistently
https://bugs.webkit.org/show_bug.cgi?id=275946
Summary [GTK][WPE] Application ID is not used consistently
Carlos Garcia Campos
Reported 2024-06-27 03:18:22 PDT
We currently need the application ID from the bubblewrap sandbox, notifications, geolocation provider, and it's sent to the web process too. We are doing different things in all of those places, so we could add a common code in WTF to get the application ID that can be used everywhere.
Attachments
Carlos Garcia Campos
Comment 1 2024-06-27 03:21:34 PDT
EWS
Comment 2 2024-06-27 22:38:13 PDT
Committed 280444@main (696c432e7e05): <https://commits.webkit.org/280444@main> Reviewed commits have been landed. Closing PR #30228 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.