[GTK][WPE] Application ID is not used consistently https://bugs.webkit.org/show_bug.cgi?id=275946

Reviewed by Michael Catanzaro.

We currently need the application ID from the bubblewrap sandbox,
notifications, geolocation provider, and it's sent to the web process
too. We are doing different things in all of those places. Add
WTF::applicationID() and use it everywhere to ensure we always get the
same value.

* Source/WTF/wtf/PlatformGTK.cmake:
* Source/WTF/wtf/PlatformWPE.cmake:
* Source/WTF/wtf/glib/Application.cpp: Added.
(WTF::applicationID):
* Source/WTF/wtf/glib/Application.h: Added.
* Source/WebKit/UIProcess/Launcher/glib/BubblewrapLauncher.cpp:
(WebKit::createFlatpakInfo):
(WebKit::effectiveApplicationId): Deleted.
* Source/WebKit/UIProcess/Launcher/glib/XDGDBusProxy.cpp:
(WebKit::XDGDBusProxy::dbusSessionProxy):
* Source/WebKit/UIProcess/Notifications/glib/NotificationService.cpp:
(WebKit::applicationIcon):
(WebKit::NotificationService::showNotification):
* Source/WebKit/UIProcess/geoclue/GeoclueGeolocationProvider.cpp:
(WebKit::GeoclueGeolocationProvider::setupGeoclueClient):
* Source/WebKit/UIProcess/glib/WebProcessPoolGLib.cpp:
(WebKit::WebProcessPool::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/280444@main