Source/WTF/wtf/PlatformGTK.cmake
@@ -4,6 +4,7 @@ list(APPEND WTF_SOURCES
     generic/MainThreadGeneric.cpp
     generic/WorkQueueGeneric.cpp
 
+    glib/Application.cpp
     glib/ChassisType.cpp
     glib/FileSystemGlib.cpp
     glib/GRefPtr.cpp
@@ -26,6 +27,7 @@ list(APPEND WTF_SOURCES
 )
 
 list(APPEND WTF_PUBLIC_HEADERS
+    glib/Application.h
     glib/ChassisType.h
     glib/GMutexLocker.h
     glib/GRefPtr.h
