Source/WTF/wtf/PlatformWPE.cmake
@@ -3,6 +3,7 @@ list(APPEND WTF_SOURCES
     generic/MemoryFootprintGeneric.cpp
     generic/WorkQueueGeneric.cpp
 
+    glib/Application.cpp
     glib/ChassisType.cpp
     glib/FileSystemGlib.cpp
     glib/GRefPtr.cpp
@@ -29,6 +30,7 @@ list(APPEND WTF_SOURCES
 )
 
 list(APPEND WTF_PUBLIC_HEADERS
+    glib/Application.h
     glib/ChassisType.h
     glib/GMutexLocker.h
     glib/GRefPtr.h
